--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/credentials/*
 *.tfstate
 *.tfstate.*
 **.terraform
@@ -5,4 +6,11 @@
 **google_credentials.json
 **logs/
 **.env
-credentials/*
+
+**.env
+**__pycache__/
+.history
+serving_dir
+.ipynb_checkpoints/
+/gcloud/
+
