--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-/credentials/*
+
+.idea
 *.tfstate
 *.tfstate.*
 **.terraform
@@ -6,11 +7,11 @@
 **google_credentials.json
 **logs/
 **.env
-
-**.env
 **__pycache__/
 .history
 serving_dir
 .ipynb_checkpoints/
+!week_6_stream_processing/avro_example/data/rides.csv
+/credentials/
 /gcloud/
-
+/spark-3.3.2-bin-hadoop3/
